--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 ---
-layout: blog
-title: Home
-description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
-  Open `index.html` to edit this text.
+layout: page
+title: Welcome to CONNECTS
+<!--description: AI 기반 구조 생물학 분석 플랫폼-->
 ---
+
+<!--## 🧬 CONNECTS - AI 기반 구조 생물학 분석 플랫폼-->
+
+<div class="message">
+📝 홈페이지 내용 작성 예정입니다. CONNECTS는 최첨단 AI 기술과 구조 생물학을 융합한 혁신적인 분석 플랫폼으로, 복잡한 생물학적 구조와 상호작용을 이해하고 예측하는 데 필요한 강력한 도구들을 제공합니다.
+</div>
+
+<!--### 🚀 주요 기능 및 특징-->
+
+<!--CONNECTS 플랫폼은 다양한 분석 도구와 기능을 제공하여 연구자들의 효율적인 연구를 지원합니다. 단백질 구조 분석부터 리간드 도킹, 가상 스크리닝까지 모든 구조 생물학 분석이 가능합니다. 최신 AI 기술을 활용한 예측 모델과 클라우드 기반 고성능 컴퓨팅으로 빠르고 정확한 분석 결과를 제공합니다.-->
+
+<!--### 💡 혁신적인 분석 솔루션-->
+
+<!--우리의 플랫폼은 AlphaFold와 같은 최신 AI 모델을 통합하여 단백질 3차원 구조를 정확하게 예측하고, 분자 동역학 시뮬레이션을 통해 단백질의 움직임과 안정성을 분석합니다. 또한 머신러닝 기반 독성 평가 시스템을 통해 신약 개발 과정에서의 안전성을 미리 검증할 수 있습니다.-->
+
+<!--### 🔬 시작하기 - 간편한 분석 워크플로우-->
+
+<!--CONNECTS를 사용하기 위해서는 먼저 분석하고자 하는 데이터를 준비해야 합니다. PDB, FASTA, SDF 등 다양한 형식의 파일을 업로드할 수 있으며, 직관적인 웹 인터페이스를 통해 쉽게 분석을 시작할 수 있습니다. 분석 결과는 실시간 3D 시각화로 확인할 수 있으며, 상세한 리포트도 함께 제공됩니다.-->
+
+<!--### 📊 최근 소식 및 업데이트-->
+
+<!--CONNECTS 팀은 지속적으로 플랫폼을 개선하고 새로운 기능을 추가하고 있습니다. 최근 ToxinPred3.0 펩타이드 독성 예측 도구가 통합되었으며, 사용자 인터페이스도 전면 개편되어 더욱 편리하게 사용할 수 있습니다. 다가오는 업데이트에서는 AlphaFold 3 통합과 실시간 협업 기능이 추가될 예정입니다.-->
+
+<!--### 🌍 글로벌 연구 협력 플랫폼-->
+
+<!--CONNECTS는 전 세계 연구자들이 함께 협력할 수 있는 플랫폼을 제공합니다. 연구 결과를 공유하고, 다른 연구자들과 실시간으로 협업할 수 있으며, 대규모 연구 프로젝트도 효율적으로 관리할 수 있습니다. 우리의 목표는 구조 생물학 연구의 민주화를 통해 인류 건강 증진에 기여하는 것입니다.-->
+
+<!--### 📞 지원 및 문의-->
+
+<!--CONNECTS 사용 중 궁금한 점이 있으시면 언제든지 연락주세요. 전문 지원팀이 24시간 대기하고 있으며, 상세한 사용 가이드와 튜토리얼도 제공합니다.-->
